Fix how letter-spacing is applied to site heading.

--- a/site/_includes/styles/components/_header.scss
+++ b/site/_includes/styles/components/_header.scss
@@ -18,6 +18,7 @@
       weight: 300;
       size: ms(5);
    }
+   letter-spacing: 1pt;
 
    line-height: 1;
    text-align: left;
